crates/tui/tests/snapshots/render__typing_a_filter.snap
---
source: crates/tui/tests/render.rs
expression: "screen(&mut model, 120, 20)"
---
"┌ Tasks (2/5) /re ─────────────────────────────────────────┐┌ [3] ─────────────────────────────────────────────────────┐"
"│READY                                                     ││Write the release notes                                   │"
"│  [12] #B Review MR !88: paginate the export  #gitlab   #r││[3]  #C  ready                                            │"
"│  [ 3] #C Write the release notes                         ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"/re▁                                                                                                                    "
