crates/tui/tests/snapshots/render__typing_a_title.snap
---
source: crates/tui/tests/render.rs
assertion_line: 213
expression: "screen(&mut model, 120, 20)"
---
"┌ Tasks (5/5) ─────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│IN PROGRESS                                                                                                           │"
"│  [ 1] #A Fix the flaky build (due in 4d)  #ci                                                                        │"
"│READY                                                                                                                 │"
"│  [12] #B Review MR !88: paginate the export  #gitlab   #review-request                                               │"
"│  [ 3] #C Write the release notes                                                                                     │"
"│LATER                                                                                                                 │"
"│  [ 4] #B Try the new profiler                                                                                        │"
"│NO STATUS                                                                                                             │"
"│  [ 5] #B Call the bank                                                                                               │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"new task (ready): Call the bank▁                                                                                        "
