crates/tui/tests/snapshots/render__typing_a_title_with_no_tasks.snap
---
source: crates/tui/tests/render.rs
expression: "screen(&mut model, 80, 10)"
---
"┌ Tasks (0/0) ─────────────────────────────────────────────────────────────────┐"
"│No open todos.                                                                │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"new task (later): First one                                                     "
