crates/tui/tests/snapshots/render__wrapped_rows_scrolled.snap
---
source: crates/tui/tests/render.rs
assertion_line: 136
expression: "screen(&mut model, 60, 9)"
---
"┌ Tasks (6/6) ─────────────────────────────────────────────┐"
"│                                                          │"
"│LATER (1)                                                 │"
"│  [ 4] #B Try the new profiler                            │"
"│                                                          │"
"│NO STATUS (1)                                             │"
"│  [ 5] #B Call the bank                                   │"
"└──────────────────────────────────────────────────────────┘"
"j/k  /  c t p l d e  Enter open  s/S sync  ? help  q quit   "
